# data-sync-trans

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.claude/agents/: mapping-row-architect.md
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: server.rs
api/src/handlers/: meta_handlers.rs  mod.rs
api/src/routes/: meta_routes.rs  mod.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/user_config/: default.config.json  default_job.json  default_job2.json  default_job3.json  my2pg.json  mybinlog2pg.json
common/: Cargo.toml
common/src/: constant.rs  data_source_config.rs  job_config.rs  logging.rs  resp.rs
common/src/app_config/: config_loader.rs  manager.rs  path.rs  schema.rs  value.rs  watcher.rs
common/src/types/: converter.rs  mapping_row.rs  mod.rs  source_type.rs  unified_value.rs
connector-rdbms/: Cargo.toml
connector-rdbms/src/: buildersql_exmple.rs  pool.rs  sql_builder.rs  util.rs
connector-rdbms/src/schema/: rdbms_discoverer.rs  schema_cache.rs
core/: Cargo.toml
core/benches/: async_trait_overhead.rs  pipeline_throughput.rs
core/doc/: ARCHITECTURE_SUMMARY.md
core/examples/: progress.rs  test_schema_discovery.rs  test_sync_minimal.rs  test_sync_simple.rs  test_update_config.rs
core/src/: core.rs  lib.rs
core/src/core/: cli.rs  container.rs  pipeline_executor.rs  progress.rs  runner.rs  serve.rs
core/src/core/scheduler/: checkpoint.rs  cmd.rs  control.rs  cron.rs  mod.rs  repl.rs  scheduler.rs  task_scheduler.rs  task_slot.rs
core/src/dsl_engine/: ast.rs  evaluator.rs  functions.rs  mod.rs  parser.rs  registry.rs
core/src/pipeline/: record_builder.rs
data_trans_cli/: Cargo.toml  README.md
data_trans_cli/src/: main.rs
data_trans_cli/user_config/: default.config.json  default_job.json  default_job2.json  default_job3.json
data_trans_common/: Cargo.toml
data_trans_common/src/: constant.rs  job_config.rs  lib.rs  resp.rs
data_trans_common/src/app_config/: config_loader.rs  path.rs  watcher.rs
data_trans_common/src/db/: pool.rs  util.rs
data_trans_common/src/interface/: mod.rs  reader.rs  registry.rs  writer.rs
data_trans_common/src/pipeline/: message.rs  mod.rs  record.rs  record_builder.rs
data_trans_common/src/schema/: discoverer.rs  evolution.rs  mod.rs  rdbms_discoverer.rs  schema_cache.rs  types.rs
data_trans_common/src/types/: converter.rs  mapping_field.rs  mapping_row.rs  mapping_schema.rs  mod.rs  original_type_info.rs  source_type.rs  typed_val.rs  unified_value.rs
data_trans_core/: CLAUDE.md  Cargo.toml  RDBMS_JOB_IMPLEMENTATION.md  RDBMS_JOB_USAGE.md  defaults.json
data_trans_core/.claude/: settings.local.json
data_trans_core/benches/: async_trait_overhead.rs
data_trans_core/doc/: CONFIG_MIGRATION.md  DATA_SOURCE.md  IMPLEMENTATION_COMPLETE.md  JOB_TRAIT_DESIGN.md  PIPELINE_DESIGN.md  REFACTORING_SUMMARY.md  STREAMING_DESIGN.md
data_trans_core/examples/: progress.rs  test_config_watch.rs  test_persistence_flow.rs  test_schema_discovery.rs  test_sync_command_new.rs  test_sync_minimal.rs  test_sync_simple.rs  test_update_config.rs
data_trans_core/src/: lib.rs
data_trans_core/src/app_config/: config_loader.rs  manager.rs  mod.rs  path.rs  schema.rs  value.rs  watcher.rs
data_trans_core/src/core/: axum_api.rs  cli.rs  client_tool.rs  db.rs  mod.rs  pipeline.rs  progress.rs  registry.rs  runner.rs  serve.rs  server.rs  sync_pipeline.rs
data_trans_core/src/doc/: ARCHITECTURE_SUMMARY.md  DATA_FLOW.md  JOB_SPLIT_DESIGN.md  JOB_TRAIT_IMPLEMENTATION.md
data_trans_core/src/dsl_engine/: ast.rs  evaluator.rs  functions.rs  mod.rs  parser.rs  registry.rs
data_trans_core/src/util/: dbpool.rs  dbutil.rs  mod.rs  pipeline_mapper.rs  rdbms_job.rs  splitutil.rs
data_trans_core/tests/: cli_sync_test.rs
data_trans_reader/: Cargo.toml
data_trans_reader/src/: api_reader.rs  database_reader.rs  lib.rs
data_trans_reader/src/rdbms_reader_util/: rdbms_reader.rs
data_trans_reader/src/rdbms_reader_util/util/: mod.rs  range_split_util.rs  reader_split_util.rs
data_trans_writer/: Cargo.toml
data_trans_writer/src/: database_writer.rs  lib.rs  types.rs
data_trans_writer/src/rdbms_writer_util/: rdbms_writer.rs
data_trans_writer/src/rdbms_writer_util/util/: writer_split_util.rs
data_trans_writer/tests/: sql_builder_test.rs  types_test.rs
my_app/: pubspec.yaml
my_app/integration_test/: simple_test.dart
my_app/lib/: main.dart
my_app/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
my_app/lib/src/rust/api/: simple.dart
my_app/rust/: Cargo.toml
my_app/rust/src/: frb_generated.rs
my_app/rust/src/api/: simple.rs
reader/: Cargo.toml
reader/src/: api_reader.rs  binlog_reader.rs  database_reader.rs  lib.rs
reader/src/rdbms_reader_util/: rdbms_reader.rs
reader/src/rdbms_reader_util/util/: client_tool.rs  range_split_util.rs  reader_split_util.rs
writer/: Cargo.toml
writer/src/: database_writer.rs  lib.rs
writer/src/rdbms_writer_util/: rdbms_writer.rs
writer/src/rdbms_writer_util/util/: writer_split_util.rs
