[package]
name = "relus_connector_rdbms"
version = { workspace = true }
edition = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
relus_common = { workspace = true }


tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
clap = { workspace = true }
dashmap = "5"
redb = "2"

[lints]
workspace = true
