[package]
name = "data_trans_cli"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "data_trans_cli"
path = "src/main.rs"

[dependencies]
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
chrono = "0.4"
data_trans_core = { path = "../data_trans_core" }
data_trans_common = { path = "../data_trans_common" }
clap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
