[package]
name = "data_trans_common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1"
config = { version = "0.15.19", features = ["json"] }
dirs-next = "2.0"
notify = "6.1"
chrono = { workspace = true }
parking_lot = { workspace = true }
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
dashmap = "5"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "mysql",
    "chrono",
    "rust_decimal",
] }
tokio = { workspace = true, features = ["sync"] }
rust_decimal = "1.36"
redb = "2"
tracing = "0.1"