[package]
name = "data_trans_core"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
nom = "7.1"
tokio = { workspace = true}
flutter_rust_bridge ={ workspace = true}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
axum = "0.7"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "any", "mysql", "postgres", "chrono"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.15.19", features = ["json"] }
toml = "0.8"
parking_lot = "0.12"
notify = "6.1"
dirs-next = "2.0"
dashmap = "5"


[dev-dependencies]
tempfile = "3.24.0"
