[package]
name = "data_trans_core"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
data_trans_reader = { path = "../data_trans_reader" }
data_trans_common = { path = "../data_trans_common" }
data_trans_writer = { path = "../data_trans_writer" }
clap = { workspace = true }
chrono = { workspace = true }
nom = "7.1"
tokio = { workspace = true }
# flutter_rust_bridge ={ workspace = true}
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1.0"
axum = "0.7"
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio",
    "any",
    "mysql",
    "postgres",
    "chrono",
] }
regex = "1.10"
toml = "0.8"
futures = "0.3"
async-trait = "0.1"
config = { version = "0.15.19", features = ["json"] }
tracing = { workspace = true }
uuid = { version = "1.11", features = ["v4"] }


[dev-dependencies]
tempfile = "3.24.0"
criterion = { version = "0.5", features = ["async_futures"] }

[[bench]]
name = "async_trait_overhead"
harness = false

[[bench]]
name = "pipeline_throughput"
harness = false
