[package]
name = "data_trans_writer"
version = "0.1.0"
edition = "2021"

[dependencies]
data_trans_common = { path = "../data_trans_common" }
data_trans_reader = { path = "../data_trans_reader" }

tracing = { workspace = true }
anyhow = "1.0"
async-trait = "0.1"
tokio = { workspace = true, features = ["sync", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "mysql",
    "chrono",
    "rust_decimal",
] }
chrono = { workspace = true }
rust_decimal = "1.36"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
