[package]
name = "relus_writer"
version = { workspace = true }
edition = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
relus_common = { workspace = true }
relus_connector_rdbms = { workspace = true }

tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }


[lints]
workspace = true
